# NativeOSGi

./: CMakeLists.txt  CNAME  README.md  index.html  params.json
cmake/: osgiFunctionCheckCompilerFlags.cmake
documentation/cpp_api/html/: Any_8h_source.html  AtomicInt_8h_source.html  BundleContext_8h_source.html  BundleException_8h_source.html  Config_8h_source.html  Constants_8h_source.html  Exception_8h_source.html  Export_8h_source.html  InvalidSyntaxException_8h_source.html  ServiceException_8h_source.html  ServiceInterface_8h_source.html  ServiceProperties_8h_source.html  ServiceReferenceBase_8h_source.html  ServiceReference_8h_source.html  ServiceRegistrationBase_8h_source.html  ServiceRegistration_8h_source.html  SharedData_8h_source.html  Threads_8h_source.html  annotated.html  annotated.js  classes.html  classosgi_1_1Any-members.html  classosgi_1_1Any.html  classosgi_1_1Any.js  classosgi_1_1BadAnyCastException-members.html  classosgi_1_1BadAnyCastException.html  classosgi_1_1BadAnyCastException.js  classosgi_1_1BundleException-members.html  classosgi_1_1BundleException.html  classosgi_1_1BundleException.js  classosgi_1_1Exception-members.html  classosgi_1_1Exception.html  classosgi_1_1Exception.js  classosgi_1_1InvalidSyntaxException-members.html  classosgi_1_1InvalidSyntaxException.html  classosgi_1_1InvalidSyntaxException.js  classosgi_1_1ServiceException-members.html  classosgi_1_1ServiceException.html  classosgi_1_1ServiceException.js  classosgi_1_1ServiceReference-members.html  (+71 more)
documentation/cpp_api/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_69.js  all_6e.js  all_6f.js  all_72.js  all_73.js  all_74.js  (+32 more)
documentation/doxygen/: CMakeLists.txt  cpp_api_doxygen.conf.in
documentation/doxygen/cpp_api/: defines.dox  mainpage.dox
framework_api/c++/: IBundleContext.h
sandbox/: CMakeLists.txt
sandbox/api/c/include/osgi/: bundle_context.h
sandbox/api_bindings/c/: CMakeLists.txt  bundle_context_impl.cpp
sandbox/bfd/: CMakeLists.txt  bfd_package_patcher.c  org_package_a.c  org_package_b.c
sandbox/c_cpp_interoperability/: CMakeLists.txt
sandbox/c_cpp_interoperability/c_consumer/: CMakeLists.txt
sandbox/c_cpp_interoperability/c_consumer/private/src/: service_consumer.c
sandbox/c_cpp_interoperability/c_greeting_provider/: CMakeLists.txt
sandbox/c_cpp_interoperability/c_greeting_provider/private/include/: greeting_impl.h
sandbox/c_cpp_interoperability/c_greeting_provider/private/src/: greeting_impl.c
sandbox/c_cpp_interoperability/cpp_complexservice_provider/: CMakeLists.txt
sandbox/c_cpp_interoperability/cpp_complexservice_provider/private/src/: ComplexService.cpp  ComplexServiceBindings.cpp  complex_service_ctocpp.cpp
sandbox/c_cpp_interoperability/cpp_complexservice_provider/public/include/: IComplexService.h  complex_service.h
sandbox/c_cpp_interoperability/cpp_consumer/: CMakeLists.txt
sandbox/c_cpp_interoperability/cpp_consumer/private/src/: service_consumer.cpp
sandbox/c_cpp_interoperability/cpp_cppserviceonly_provider/: CMakeLists.txt
sandbox/c_cpp_interoperability/cpp_cppserviceonly_provider/private/src/: CppOnlyService.cpp
sandbox/c_cpp_interoperability/cpp_cppserviceonly_provider/public/include/: ICppOnlyService.h
sandbox/c_cpp_interoperability/cpp_cppserviceonly_provider/public/src/: ICppOnlyService.cpp
sandbox/c_cpp_interoperability/cpp_greeting_provider/: CMakeLists.txt
sandbox/c_cpp_interoperability/cpp_greeting_provider/private/src/: CppGreeter.cpp
sandbox/c_cpp_interoperability/cpp_registry/: CMakeLists.txt  sb_registry.cpp  sb_registry.h  sb_registry_c_api.h
sandbox/c_cpp_interoperability/greeting_interface_bundle/: CMakeLists.txt
sandbox/c_cpp_interoperability/greeting_interface_bundle/private/src/: GreetingServiceBindings.cpp
sandbox/c_cpp_interoperability/greeting_interface_bundle/public/include/: IGreetingService.h  greeting_service.h
sandbox/c_cpp_interoperability/test_driver/: CMakeLists.txt  main.cpp  test_driver_config.h.in
sandbox/c_greeting_consumer/: CMakeLists.txt
sandbox/c_greeting_consumer/private/src/: greeting_service_consumer.c
sandbox/c_greeting_provider/: CMakeLists.txt
sandbox/c_greeting_provider/private/src/: greeting_impl.c
sandbox/cpp_complexservice_provider/private/src/: complex_service_cpptoc.cpp
sandbox/cpp_complexservice_provider/public/include/: IComplexService.h
sandbox/cpp_consumer/: CMakeLists.txt
sandbox/cpp_consumer/private/src/: service_consumer.cpp
sandbox/cpp_cppserviceonly_provider/public/include/: ICppOnlyService.h
sandbox/cpp_framework/: BundleContextImpl.cpp  BundleContextImpl.h  CMakeLists.txt  ServiceHandle.h  ServiceReferenceImpl.cpp  ServiceReferenceImpl.h  ServiceRegistrationImpl.cpp  ServiceRegistrationImpl.h  ServiceRegistry.cpp  ServiceRegistry.h
sandbox/cpp_greeting_consumer/: CMakeLists.txt
sandbox/cpp_greeting_consumer/private/src/: greeting_service_consumer.cpp
sandbox/cpp_greeting_provider/private/src/: CppGreeter.cpp
sandbox/cpp_registry/: sb_osgi_interface.h  sb_registry.cpp  sb_registry.h  sb_registry_c_api.h
sandbox/greeting_interface_bundle/: CMakeLists.txt
sandbox/greeting_interface_bundle/private/src/: greeting_service_cpptoc.cpp  greeting_service_ctocpp.cpp
sandbox/greeting_interface_bundle/public/include/: IGreetingService.h  greeting_service.h
sandbox/test_driver/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/api/cpp/: CMakeLists.txt
src/api/cpp/include/osgi/: Any.h  AtomicInt.h  BundleContext.h  BundleContext.txx  BundleException.h  Config.h.in  Constants.h  Exception.h  Export.h  InvalidSyntaxException.h  ServiceException.h  ServiceInterface.h  ServiceProperties.h  ServiceReference.h  ServiceReferenceBase.h  ServiceRegistration.h  ServiceRegistrationBase.h  SharedData.h  Threads.h
src/api/cpp/src/: Any.cpp  BundleContext.cpp  BundleException.cpp  Constants.cpp  Exception.cpp  InvalidSyntaxException.cpp  ServiceException.cpp  ServiceReferenceBase.cpp  ServiceRegistrationBase.cpp
src/util/include/osgi/: BindingMacros.h  ExportMacros.h.in  MacroUtils.h
